Migrate JavaSettingsTab business code
- Converts Constants.SCREEN_RESOLUTIONS to ScreenResolution objects
- Add CheckingKeyListener to ensure text field content is correct